회원가입 초안

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
     <title>Home</title>
 </head>
 <body>
-    <button onclick="window.location.href='/board'">게시판 바로가기</button>
+    <h1>PY-BOARD COMMUNITY</h1>
+    <button onclick="window.location.href='/board'">커뮤니티 입장</button>
     <button onclick="window.location.href='/login'">로그인</button>
     <button onclick="window.location.href='/sign-up'">회원가입</button>
 </body>
