--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,7 @@
         <input type="text" placeholder="아이디를 입력하세요.">
         <input type="password" placeholder="비밀번호를 입력하세요.">
         <button type="submit">로그인</button>
+        <button type="button" onclick="window.location.href='/'">취소</button>
     </form>
 </body>
 </html>
