--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -7,12 +7,13 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <form class="sign-up" action="" method="POST">
-        <input type="text" placeholder="아이디를 입력하세요.">
-        <input type="password" placeholder="비밀번호를 입력하세요.">
-        <input type="password" placeholder="비밀번호를 확인해주세요.">
-        <input type="text" placeholder="닉네임을 입력하세요.">
-        <button>가입완료</button>
+    <form class="sign-up" action="/sign-up" method="POST">
+        <input id="id" type="text" placeholder="아이디를 입력하세요." name="id">
+        <input id="pw" type="password" placeholder="비밀번호를 입력하세요." name="pw">
+        <input id="pwc" type="password" placeholder="비밀번호를 확인해주세요." name="pwc">
+        <input id="nickname" type="text" placeholder="닉네임을 입력하세요." name="nickname">
+        <button type="submit">가입완료</button>
+        <button type="button" onclick="window.location.href='/'">취소</button>
     </form>
 </body>
 </html>
