--- a/templates/login.html
+++ b/templates/login.html
@@ -8,10 +8,16 @@
 </head>
 <body>
     <form class="login" action="" method="POST">
-        <input type="text" placeholder="아이디를 입력하세요.">
-        <input type="password" placeholder="비밀번호를 입력하세요.">
-        <button type="submit">로그인</button>
-        <button type="button" onclick="window.location.href='/'">취소</button>
+        <div>
+            <input type="text" placeholder="아이디를 입력하세요." name="id">
+        </div>
+        <div>
+            <input type="password" placeholder="비밀번호를 입력하세요." name="pw">
+        </div>
+        <div>
+            <button type="submit">로그인</button>
+            <button type="button" onclick="window.location.href='/'">취소</button>
+        </div>
     </form>
 </body>
 </html>
