f포맷팅 + 작성자만 수정 가능

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <button onclick="window.location.href='/board'">커뮤니티 입장</button>
 
     <div>
-        <form action="" method="POST">
+        <form action="/logout" method="POST">
             <button type="submit">로그아웃</button>
         </form>
     </div>
