로그인정보 쿠키와 세션에 저장

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <title>Login</title>
 </head>
 <body>
-    <form class="login" action="" method="POST">
+    <form class="login" action="http://127.0.0.1:5000/login" method="POST">
         <div>
             <input id="id" type="text" placeholder="아이디를 입력하세요." name="id">
         </div>
