변수 네이밍 정리, 비회원 댓글 수정, 삭제 초안

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,10 @@
 <body>
     <form class="login" action="http://127.0.0.1:5000/login" method="POST">
         <div>
-            <input id="id" type="text" placeholder="아이디를 입력하세요." name="id">
+            <input id="id" type="text" placeholder="아이디를 입력하세요." name="login_id">
         </div>
         <div>
-            <input id="pw" type="password" placeholder="비밀번호를 입력하세요." name="pw">
+            <input id="pw" type="password" placeholder="비밀번호를 입력하세요." name="password">
         </div>
         <div>
             <button type="submit">로그인</button>
